--- a/templates/base.html
+++ b/templates/base.html
@@ -7,6 +7,8 @@
   <head>
       <meta charset="utf-8" />
 
+      <link href='http://fonts.googleapis.com/css?family=Open+Sans:400italic,700italic,400,300,700' rel='stylesheet' type='text/css'>
+
       %% block head_top
       %% endblock
 
