--- a/static/stylesheets/sass/_global.sass
+++ b/static/stylesheets/sass/_global.sass
@@ -173,3 +173,26 @@ footer
     float: right
   a
     color: white
+
+.sponsor
+  width: 100% - (100% / $gr / $gr)
+  margin-left: 100% / $gr / $gr / $gr / $gr / $gr
+  p, li
+    font-size: 18px
+    line-height: 1.5em
+    margin-bottom: 1em
+  li
+    list-style: disc
+    margin-left: 1em
+  h1
+    font-size: 18px * 2.5
+    line-height: 1.3em
+    margin-bottom: 0.5em
+    font-weight: bold
+  a
+    color: #0088dd
+    text-decoration: none
+    border-bottom: 1px dashed #22a0ff
+  strong
+    font-weight: bold
+
