--- a/static/stylesheets/sass/_devices.sass
+++ b/static/stylesheets/sass/_devices.sass
@@ -2,6 +2,20 @@
   .jumpdown
     width: 100%
 
+@media only screen and (max-width:880px)
+  .info h2
+    font-size: 1rem
+
+//@media only screen and (max-width:800px)
+//
+//  .info h2
+//    font-size: 1.5rem
+//    .divider
+//      height: 0px
+//      width: 100%
+//      display: inline-block
+//      content: ''
+
 // Print stylesheet, adapted from H5BPv4.3.0
 @media print
   *
