--- a/templates/splash.html
+++ b/templates/splash.html
@@ -11,7 +11,7 @@
 
     <div class="info">
       <img src="{{ url_for('static', filename='img/logo-rethink-top.png') }}" alt="{{ _('Rethink') }}" />
-      <h2 class='fulljust'>{{ _("January 9th to 12th | Toronto, Ontario") }}</h2>
+      <h2 class='fulljust'>{{ _("January 9th to 12th<span class='divider'> | </span>Toronto, Ontario") }}</h2>
       <p>{{ _("Leadership, Entrepreneurship, and Partnership for Global Development") }}</p>
     </div>
 
