updated copy and translations

--- a/templates/splash.html
+++ b/templates/splash.html
@@ -23,8 +23,8 @@
   <main>
     <div class="overlay">
       <div class="maininner">
-        <p>{{ _("<strong>What's possible</strong> if we let go of traditional partnership models in global development?") }}</p>
-        <p>{{ _("Join attendees from across two continents and one hundred organizations at Canada's largest and most exciting development conference! Make this event the highlight of your year by joining us and 700 other passionate leaders, entrepreneurs, and partners.") }}</p>
+        <p>{{ _("<strong>RETHINK 2014</strong> is a space curated by EWB, but created in real time by a diverse, cross-sector, and international delegation.") }}</p>
+        <p>{{ _("Join individuals and organizations who are passionate about accelerating global development in developing leadership, fostering and innovating entrepreneurship, and building strategic partnerships.") }}</p>
         <a class="button" href="#signup">{{ _("Sign up now") }}</a>
       </div>
     </div>
