--- a/static/stylesheets/css/main.css
+++ b/static/stylesheets/css/main.css
@@ -79,14 +79,14 @@ html, body {
   height: 100%;
 }
 
-/* line 52, ../sass/_variables.sass */
+/* line 56, ../sass/_variables.sass */
 .ir {
   background-color: transparent;
   border: 0;
   overflow: hidden;
   *text-indent: -9999px;
 }
-/* line 58, ../sass/_variables.sass */
+/* line 62, ../sass/_variables.sass */
 .ir:before {
   content: "";
   display: block;
@@ -94,24 +94,24 @@ html, body {
   height: 150%;
 }
 
-/* line 65, ../sass/_variables.sass */
+/* line 69, ../sass/_variables.sass */
 .fulljust {
   text-align: justify;
 }
-/* line 67, ../sass/_variables.sass */
+/* line 71, ../sass/_variables.sass */
 .fulljust:after {
   content: "";
   display: inline-block;
   width: 100%;
 }
 
-/* line 73, ../sass/_variables.sass */
+/* line 77, ../sass/_variables.sass */
 .hidden {
   display: none !important;
   visibility: hidden;
 }
 
-/* line 78, ../sass/_variables.sass */
+/* line 82, ../sass/_variables.sass */
 .visuallyhidden {
   border: 0;
   clip: rect(0 0 0 0);
@@ -123,7 +123,7 @@ html, body {
   width: 1px;
 }
 
-/* line 91, ../sass/_variables.sass */
+/* line 95, ../sass/_variables.sass */
 .visuallyhidden.focusable:active, .visuallyhidden.focusable:focus {
   clip: auto;
   height: auto;
@@ -133,26 +133,26 @@ html, body {
   width: auto;
 }
 
-/* line 100, ../sass/_variables.sass */
+/* line 104, ../sass/_variables.sass */
 .invisible {
   visibility: hidden;
 }
 
-/* line 104, ../sass/_variables.sass */
+/* line 108, ../sass/_variables.sass */
 .clearfix {
   *zoom: 1;
 }
-/* line 107, ../sass/_variables.sass */
+/* line 111, ../sass/_variables.sass */
 .clearfix:before, .clearfix:after {
   content: " ";
   display: table;
 }
-/* line 111, ../sass/_variables.sass */
+/* line 115, ../sass/_variables.sass */
 .clearfix:after {
   clear: both;
 }
 
-/* line 115, ../sass/_variables.sass */
+/* line 119, ../sass/_variables.sass */
 .browsehappy {
   margin: 0.2em 0;
   background: #cccccc;
@@ -170,38 +170,6 @@ html {
 html {
   font-family: "Open Sans", Verdana, Helvetica, sans-serif;
   color: #343433;
-}
-
-@font-face {
-  font-family: "asap";
-  src: url("../../font/asap-bold-webfont.eot");
-  src: url("../../font/asap-bold-webfont.eot?#iefix") format("embedded-opentype"), url("../../font/asap-bold-webfont.woff") format("woff"), url("../../font/asap-bold-webfont.ttf") format("truetype"), url("../../font/asap-bold-webfont.svg#asapbold") format("svg");
-  font-weight: bold;
-  font-style: normal;
-}
-
-@font-face {
-  font-family: "asap";
-  src: url("../../font/asap-bolditalic-webfont.eot");
-  src: url("../../font/asap-bolditalic-webfont.eot?#iefix") format("embedded-opentype"), url("../../font/asap-bolditalic-webfont.woff") format("woff"), url("../../font/asap-bolditalic-webfont.ttf") format("truetype"), url("../../font/asap-bolditalic-webfont.svg#asapbold_italic") format("svg");
-  font-weight: bold;
-  font-style: italic;
-}
-
-@font-face {
-  font-family: "asap";
-  src: url("../../font/asap-italic-webfont.eot");
-  src: url("../../font/asap-italic-webfont.eot?#iefix") format("embedded-opentype"), url("../../font/asap-italic-webfont.woff") format("woff"), url("../../font/asap-italic-webfont.ttf") format("truetype"), url("../../font/asap-italic-webfont.svg#asapitalic") format("svg");
-  font-weight: normal;
-  font-style: italic;
-}
-
-@font-face {
-  font-family: "asap";
-  src: url("../../font/asap-regular-webfont.eot");
-  src: url("../../font/asap-regular-webfont.eot?#iefix") format("embedded-opentype"), url("../../font/asap-regular-webfont.woff") format("woff"), url("../../font/asap-regular-webfont.ttf") format("truetype"), url("../../font/asap-regular-webfont.svg#asapregular") format("svg");
-  font-weight: normal;
-  font-style: normal;
 }
 
 @font-face {
@@ -302,19 +270,26 @@ header .info {
   padding-top: 36px;
   color: white;
   text-shadow: 0 0 6px black;
-  background-size: 150% auto;
   background-position: bottom right;
 }
-/* line 60, ../sass/_global.sass */
+/* line 57, ../sass/_global.sass */
+.backgroundsize .overlay {
+  background-size: 150% auto;
+}
+/* line 61, ../sass/_global.sass */
 .overlay:nth-child(1) {
+  -ms-filter: "progid:DXImageTransform.Microsoft.AlphaImageLoader(src='../../img/underlay-2.png', sizingMethod='scale')";
+}
+/* line 63, ../sass/_global.sass */
+.backgroundsize .overlay:nth-child(1) {
   background-image: url("../../img/underlay-2.png");
 }
-/* line 62, ../sass/_global.sass */
+/* line 65, ../sass/_global.sass */
 .overlay p {
   margin-bottom: 27px;
   margin-bottom: 1.5rem;
 }
-/* line 63, ../sass/_global.sass */
+/* line 66, ../sass/_global.sass */
 .overlay p:first-child {
   font-size: 29px;
   font-size: 1.61803rem;
@@ -323,20 +298,20 @@ header .info {
   line-height: 32px;
   line-height: 1.8rem;
 }
-/* line 67, ../sass/_global.sass */
+/* line 70, ../sass/_global.sass */
 .overlay strong {
   font-size: 48px;
   font-weight: 300;
   text-transform: lowercase;
 }
-/* line 71, ../sass/_global.sass */
+/* line 74, ../sass/_global.sass */
 .overlay .button {
   position: absolute;
   left: 50%;
   margin-left: -90px;
 }
 
-/* line 76, ../sass/_global.sass */
+/* line 79, ../sass/_global.sass */
 .button, input[type="submit"] {
   width: 180px;
   padding: 12px 0;
@@ -348,34 +323,34 @@ header .info {
   color: white;
   background-color: #92b213;
 }
-/* line 86, ../sass/_global.sass */
+/* line 89, ../sass/_global.sass */
 .button:hover, input[type="submit"]:hover {
   background-color: #8cac0d;
 }
 
-/* line 89, ../sass/_global.sass */
+/* line 92, ../sass/_global.sass */
 .conference-points {
   margin-top: 48px;
   font-size: 0;
 }
-/* line 92, ../sass/_global.sass */
+/* line 95, ../sass/_global.sass */
 .conference-points img {
   height: 96px;
   width: auto;
   margin-bottom: 9px;
 }
-/* line 96, ../sass/_global.sass */
+/* line 99, ../sass/_global.sass */
 .conference-points li {
   vertical-align: top;
 }
 
-/* line 99, ../sass/_global.sass */
+/* line 102, ../sass/_global.sass */
 .jumpdown {
   display: inline-block;
   width: 50%;
   text-align: center;
 }
-/* line 103, ../sass/_global.sass */
+/* line 106, ../sass/_global.sass */
 .jumpdown li {
   display: inline-block;
   width: 38%;
@@ -387,7 +362,7 @@ header .info {
   line-height: 1.5rem;
 }
 
-/* line 110, ../sass/_global.sass */
+/* line 113, ../sass/_global.sass */
 #signup {
   width: 100%;
   min-width: 800px;
@@ -395,7 +370,7 @@ header .info {
   color: white;
   background-color: #f58345;
 }
-/* line 116, ../sass/_global.sass */
+/* line 119, ../sass/_global.sass */
 #signup p:first-child {
   font-size: 29px;
   font-size: 1.61803rem;
@@ -405,29 +380,29 @@ header .info {
   margin-bottom: 14px;
   margin-bottom: 0.75rem;
 }
-/* line 120, ../sass/_global.sass */
+/* line 123, ../sass/_global.sass */
 #signup strong {
   font-weight: bold;
 }
-/* line 122, ../sass/_global.sass */
+/* line 125, ../sass/_global.sass */
 #signup ul {
   list-style-type: disc;
 }
-/* line 124, ../sass/_global.sass */
+/* line 127, ../sass/_global.sass */
 #signup li {
   margin-left: 1em;
 }
-/* line 127, ../sass/_global.sass */
+/* line 130, ../sass/_global.sass */
 #signup .info {
   width: 60%;
   float: left;
 }
-/* line 130, ../sass/_global.sass */
+/* line 133, ../sass/_global.sass */
 #signup form {
   width: 35%;
   float: right;
 }
-/* line 133, ../sass/_global.sass */
+/* line 136, ../sass/_global.sass */
 #signup form label {
   text-transform: uppercase;
   font-size: 14px;
@@ -435,7 +410,7 @@ header .info {
   line-height: 27px;
   line-height: 1.5rem;
 }
-/* line 136, ../sass/_global.sass */
+/* line 139, ../sass/_global.sass */
 #signup form input[type="text"] {
   width: 100%;
   height: 48px;
@@ -447,57 +422,62 @@ header .info {
   line-height: 27px;
   line-height: 1.5rem;
 }
-/* line 143, ../sass/_global.sass */
+/* line 146, ../sass/_global.sass */
 #signup form input[type="submit"] {
   background-color: #accc2d;
   margin-top: 14px;
   margin-top: 0.75rem;
   float: right;
 }
-/* line 145, ../sass/_global.sass */
+/* line 148, ../sass/_global.sass */
 #signup form input[type="submit"]:hover {
   background-color: #a3c324;
 }
 
-/* line 150, ../sass/_global.sass */
+/* line 153, ../sass/_global.sass */
 .sponsors {
   margin: 36px auto;
   text-align: center;
 }
-/* line 153, ../sass/_global.sass */
+/* line 156, ../sass/_global.sass */
 .sponsors ul {
   width: 80%;
   margin: 36px auto 0;
 }
-/* line 156, ../sass/_global.sass */
+/* line 159, ../sass/_global.sass */
 .sponsors li {
   display: inline-block;
   margin: 0 36px;
-  background-image: url('/static/img/sponsors-s82ae35dcd2.png');
-  background-size: 168px 192px;
 }
 /* line 37, ../sass/_variables.sass */
 .sponsors li.hatch {
   height: 96px;
   width: 168px;
   background-position:  0 0;
+  background-image: url("../../img/sponsors-ie/hatch-ie.png");
 }
 /* line 37, ../sass/_variables.sass */
 .sponsors li.transcanada {
   height: 96px;
   width: 168px;
   background-position:  0 -96px;
+  background-image: url("../../img/sponsors-ie/transcanada-ie.png");
 }
-/* line 160, ../sass/_global.sass */
+/* line 47, ../sass/_variables.sass */
+.backgroundsize .sponsors li {
+  background-image: url('/static/img/sponsors-s82ae35dcd2.png');
+  background-size: 168px 192px;
+}
+/* line 163, ../sass/_global.sass */
 .sponsors p {
   font-size: 12px;
 }
-/* line 162, ../sass/_global.sass */
+/* line 165, ../sass/_global.sass */
 .sponsors a {
   color: #8766ad;
 }
 
-/* line 165, ../sass/_global.sass */
+/* line 168, ../sass/_global.sass */
 footer {
   height: 36px;
   line-height: 36px;
@@ -508,15 +488,15 @@ footer {
   background-color: #727273;
   font-size: 12px;
 }
-/* line 174, ../sass/_global.sass */
+/* line 177, ../sass/_global.sass */
 footer p {
   float: left;
 }
-/* line 176, ../sass/_global.sass */
+/* line 179, ../sass/_global.sass */
 footer small {
   float: right;
 }
-/* line 178, ../sass/_global.sass */
+/* line 181, ../sass/_global.sass */
 footer a {
   color: white;
 }
