--- a/templates/splash.html
+++ b/templates/splash.html
@@ -31,29 +31,25 @@
 
     <div class="conference-points">
       <ul>
-        <li class="jumpdown">
-          <ul>
-            <li>
-              <img src="{{ url_for('static', filename='img/icon-learn-lead.png') }}" alt="{{ _('Learn and lead') }}" />
-              <p>{{ _("As both delegate and presenter, explore new theories and strategies.") }}</p>
-            </li>
-            <li>
-              <img src="{{ url_for('static', filename='img/icon-connect.png') }}" alt="{{ _('Connect') }}" />
-              <p>{{ _("To experts, investors, and coalition efforts within and beyond your field.") }}</p>
-            </li>
-          </ul>
+        <li>
+          <img src="{{ url_for('static', filename='img/icon-learn-lead.png') }}" alt="{{ _('Learn and lead') }}" />
+          <h3>{{ _('Learn and lead') }}</h3>
+          <p>{{ _("As both delegate and presenter, explore new theories and strategies.") }}</p>
         </li>
-        <li class="jumpdown">
-          <ul>
-            <li>
-              <img src="{{ url_for('static', filename='img/icon-develop.png') }}" alt="{{ _('Develop') }}" />
-              <p>{{ _("Practical skills and innovative processes to work in global development.") }}</p>
-            </li>
-            <li>
-              <img src="{{ url_for('static', filename='img/icon-share.png') }}" alt="{{ _('Share') }}" />
-              <p>{{ _("Whether yourself or your organization, promote or test your current ideas.") }}</p>
-            </li>
-          </ul>
+        <li>
+          <img src="{{ url_for('static', filename='img/icon-connect.png') }}" alt="{{ _('Connect') }}" />
+          <h3>{{ _('Connect') }}</h3>
+          <p>{{ _("To experts, investors, and coalition efforts within and beyond your field.") }}</p>
+        </li>
+        <li>
+          <img src="{{ url_for('static', filename='img/icon-develop.png') }}" alt="{{ _('Develop') }}" />
+          <h3>{{ _('Develop') }}</h3>
+          <p>{{ _("Practical skills and innovative processes to work in global development.") }}</p>
+        </li>
+        <li>
+          <img src="{{ url_for('static', filename='img/icon-share.png') }}" alt="{{ _('Share') }}" />
+          <h3>{{ _('Share') }}</h3>
+          <p>{{ _("Whether yourself or your organization, promote or test your current ideas.") }}</p>
         </li>
       </ul>
     </div>
