--- a/static/stylesheets/sass/sponsor.sass
+++ b/static/stylesheets/sass/sponsor.sass
@@ -1,12 +1,14 @@
 @import main
 
+body, html
+  height: auto
+
 .overlay
   text-align: center
 
 .sponsor-page
   width: 100% - (100% / $gr / $gr)
-  margin: auto
-  margin-top: 48px
+  margin: 48px auto
   p, li
     font-size: 18px * 1.2
     line-height: 1.5em
@@ -24,4 +26,4 @@
 @media only screen and (max-width:480px)
   .sponsor-page
     width: 95%
-    margin: 36px 2.5% 0
+    margin: 36px 2.5%
